@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-01T01:04:47Z",
+  "timestamp" : "2023-11-01T08:17:15Z",
   "count_outdated" : 936,
   "uniques_outdated" : 551,
-  "count" : 978,
-  "uniques" : 571,
+  "count" : 980,
+  "uniques" : 573,
   "clones" : [
     {
       "timestamp": "2023-10-18T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-01T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
