@@ -1,5 +1,5 @@
 {
-  "count": 41,
+  "count": 43,
   "uniques": 3,
   "clones": [
     {
@@ -71,6 +71,11 @@
       "timestamp": "2023-10-31T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-01T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
