@@ -1,3 +1,12 @@
+2023-11-01T08:17:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6717326078 # 1336
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-01
+* notice: last 14d: unq all: 3 43
+* notice: prev accum: outdated-unq outdated-all / unq all: 551 936 / 571 978
+* notice: next accum: outdated-unq outdated-all / unq all: 551 936 / 573 980
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-11-01]
+
 2023-11-01T01:04:47Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6714298950 # 1335
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-01
